--- a/misc/choices.html
+++ b/misc/choices.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Group 0115 - AI-Human Collaboration</title>
-    <link rel="stylesheet" href="styles/mystyles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var lastUpdated = new Date(document.lastModified);
@@ -13,32 +13,70 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    
+    <style>
+.bordered-text ul {
+  display: inline-block;
+  text-align: left;
+  padding-left: 0;
+  font-size: 32px; 
+}
+
+.bordered-text li {
+  list-style-type: none;
+}
+
+.bordered-text li:before {
+  content: "\2022";
+  margin-right: 0.5em;
+  float: left;
+}
+
+.bordered-text li:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+      
+    </style>
   </head>
   <body>
     <!-- Site navigation menu -->
     <ul class="navbar">
       <li>
-        <a href="index.html">Home page</a>
+        <a href="../index.html">Home page</a>
       <li>
-        <a href="misc/topic.html">Technology/Topic</a>
+        <a href="topic.html">Technology/Topic</a>
       <li>
-        <a href="misc/opportunities.html">Opportunities</a>
+        <a href="opportunities.html">Opportunities</a>
       <li>
-        <a href="misc/risks.html">Risks</a>
+        <a href="risks.html">Risks</a>
       <li>
-        <a href="misc/choices.html">Choices</a>
+        <a href="choices.html">Choices</a>
       <li>
-        <a href="misc/ethics.html">Ethical Reflections</a>
+        <a href="ethics.html">Ethical Reflections</a>
       <li>
-        <a href="misc/references.html">References</a>
+        <a href="references.html">References</a>
       <li>
-        <a href="misc/process.html">Process Support</a>
+        <a href="process.html">Process Support</a>
     </ul>
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-        <p>This site is an overview of the group topic "AI-Human Collaboration in The Job Market".</p>
-        <p>On the left are columns in which you can click on to view the respective research areas of the topic.</p>
+      <h2>Risks:</h2>
+  <ul>
+    <li>AI making jobs obsolete</li>
+    <li>A loss of human independency or creativity</li>
+    <li>Massive lay-offs to compensate for AI in the workplace</li>
+    <li>General workforce safety</li>
+  </ul>
+      <p> It can be a somewhat daunting to imagine a dystopian world where AI has replaced most jobs, and have hindered the job market, making jobs obsolete to the average person. Let me be clear that this is a perfectly normal reaction to have. 
+        However, this is not the case. Yes, some jobs will become obsolete, but new jobs will be created as a result of AI. What we do know for certain is that companies whose main goal is to deploy AI to automate processes in order to mainly 
+        replace employees will only see short-term productivity gains. This conclusion was obtained by said research relating to the graph that involved 1500 companies, they found that <i>"firms achieve the most significant performance improvements 
+        when humans and machines work together. Through such collaborative intelligence, humans and AI actively enhance each other’s complementary strengths: the leadership, teamwork, creativity, and social skills of the former, and the speed, scalability, and so on".</i> </p>
+
+Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
