--- a/misc/choices.html
+++ b/misc/choices.html
@@ -66,17 +66,17 @@
       <h1>AI-Human Collaboration & The Job Market</h1>
       <h2>Risks:</h2>
   <ul>
-    <li>AI making jobs obsolete</li>
-    <li>A loss of human independency or creativity</li>
-    <li>Massive lay-offs to compensate for AI in the workplace</li>
-    <li>General workforce safety</li>
+    <li>Gig-economy self-sustaining jobs</li>
+    <li>Contact-to-contract workforce</li>
+    <li>Personal choice & freedom on AI-Human collaboration within a job sector.</li>
   </ul>
-      <p> It can be a somewhat daunting to imagine a dystopian world where AI has replaced most jobs, and have hindered the job market, making jobs obsolete to the average person. Let me be clear that this is a perfectly normal reaction to have. 
-        However, this is not the case. Yes, some jobs will become obsolete, but new jobs will be created as a result of AI. What we do know for certain is that companies whose main goal is to deploy AI to automate processes in order to mainly 
-        replace employees will only see short-term productivity gains. This conclusion was obtained by said research relating to the graph that involved 1500 companies, they found that <i>"firms achieve the most significant performance improvements 
-        when humans and machines work together. Through such collaborative intelligence, humans and AI actively enhance each other’s complementary strengths: the leadership, teamwork, creativity, and social skills of the former, and the speed, scalability, and so on".</i> </p>
+      <p>The increased use of AI within business has also given rise to the "Gig Economy" which is a freely available choice for you to pursue. These jobs usually are short-term, freelancer-like jobs where you are independent, and are paid on a contract-to-contract basis. 
+        This can be a variety of one-off jobs to short temporary hires for months at a time. The most common Gig Economy jobs you might know can include a lot of food delivery services such as Uber, or even hotel apps like AirBnB. Other independent self-sustaining jobs arise 
+        in the case where a service is in short supply due to high consumer demand. Overall, it's inevitable that AI will drastically change how a workforce operates. In fact, a survey of 1,075 companies in 12 industries found that the more of AI-Human collaboration principles 
+        companies adopted (principles such as standard business practices, employee involvement, cultivating and re-imagining employee skills, etc) found an increased overall performance in terms of speed, cost savings, revenues, or other operational measures. 
+        A big disadvantage AI has is that what comes naturally to people (making a joke, for example) can be <b>tricky for machines</b>, and what’s straightforward for machines (analyzing gigabytes of data) <b>remains virtually impossible for humans.</b></p>
 
-Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  
+<br> I will now leave you with this closing statement: <b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
