--- a/misc/choices.html
+++ b/misc/choices.html
@@ -64,7 +64,7 @@
     <!-- Main content -->
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
-      <h2>Risks:</h2>
+      <h2>Choices:</h2>
   <ul>
     <li>Gig-economy self-sustaining jobs</li>
     <li>Contact-to-contract workforce</li>
