--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>ethics</title>
-  	<link rel="stylesheet" href="../styles/minimal-table.css">
-  </head>
-
-<body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
-<!-- Site navigation menu -->
-
-<ul class="navbar">
-  <li><a href="../index.html">Home page</a>
-  <li><a href="topic.html">Technology/Topic</a>
-	<li><a href="opportunities.html">Opportunities</a>
-	<li><a href="risks.html">Risks</a>
-	<li><a href="choices.html">Choices</a>
-	<li><a href="ethics.html">Ethical Reflections</a>
-	<li><a href="references.html">References</a>
-   <li><a href="process.html">Process Support</a>
-</ul>
-</body>
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    
+	</head>
+  <body>
+    <!-- Site navigation menu -->
+    <ul class="navbar">
+      <li>
+        <a href="../index.html">Home page</a>
+      <li>
+        <a href="topic.html">Technology/Topic</a>
+      <li>
+        <a href="opportunities.html">Opportunities</a>
+      <li>
+        <a href="risks.html">Risks</a>
+      <li>
+        <a href="choices.html">Choices</a>
+      <li>
+        <a href="ethics.html">Ethical Reflections</a>
+      <li>
+        <a href="references.html">References</a>
+      <li>
+        <a href="process.html">Process Support</a>
+    </ul>
 <!-- Main content -->
 <h1>Ethical Issues and Reflections</h1>
 
