--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -90,10 +90,15 @@
   <hr/>
 <p><h6><em>Note: you can replace the Link to Canvas Comp501 with a'hard coded' link to your personal repository in this form or equivalent.</p></h6></em> 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
- </html>
+    <!-- Sign and date the page, it's only polite! -->
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+  </body>
+</html>
