--- a/misc/references.html
+++ b/misc/references.html
@@ -3,6 +3,16 @@
 <head>
   <title>references</title>
   	<link rel="stylesheet" href="../styles/mystyles.css">
+<style>
+.h5 {
+  display: inline-block;
+  text-align: left;
+  padding-left: 0;
+  font-size: 16px; 
+  font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif;
+}
+      
+    </style>
   </head>
 
 <body>
@@ -24,12 +34,13 @@
 <h1>References</h1>
 
 
-</ul><h4><p>The page or area listing the sources <em>(high quality refereed journal or conference articles - cited as APA formatted references)</em>
-and any web links to high quality resources supporting the arguments in your site.<p></h4>
 
-</ul><h4><p>An example of a cited reference:<p></h4>
-
-</ul><h5><p>Baecker, R. M. (2019). Computers and society: Modern perspectives: Oxford University Press, USA.<p></h5>
+</ul><h5><p>Ben Lutkevich, Alexander S. Gillis (2022). What is the gig economy? TechTarget.</p></h5>
+</ul><h5><p>Farrah Tomazin (2023). AI evolving faster than even its biggest backers expected. The Sydney Morning Herald.</p></h5>
+</ul><h5><p>Knight, B., Mitrofanov, D., & Netessine, S. (2022). The impact of AI technology on the productivity of gig economy workers. Available at SSRN 4372368.</p></h5>
+</ul><h5><p>Makridakis, S. (2017). The forthcoming artificial intelligence (AI) revolution: Its impact on society and firms. Futures, 90, 46-60.</p></h5>
+</ul><h5><p>Mohamed Kande and Murat Sonmez (2020). Don't fear AI. It will lead to long-term job growth. World Economic Forum.</p></h5>
+</ul><h5><p>Sturm, T., Gerlach, J. P., Pumplun, L., Mesbah, N., Peters, F., Tauchert, C., ... & Buxmann, P. (2021). Coordinating human and machine learning for effective organizational learning. MIS Quarterly, 45(3).</p></h5>
 
 <address>Made 1 March 2021<br>
   by Tony Clear.</address>
