--- a/misc/references.html
+++ b/misc/references.html
@@ -42,9 +42,14 @@
 </ul><h5><p>Mohamed Kande and Murat Sonmez (2020). Don't fear AI. It will lead to long-term job growth. World Economic Forum.</p></h5>
 </ul><h5><p>Sturm, T., Gerlach, J. P., Pumplun, L., Mesbah, N., Peters, F., Tauchert, C., ... & Buxmann, P. (2021). Coordinating human and machine learning for effective organizational learning. MIS Quarterly, 45(3).</p></h5>
 
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
- 
-<p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
-<p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
+    <!-- Sign and date the page, it's only polite! -->
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
  </html>
