--- a/misc/references.html
+++ b/misc/references.html
@@ -3,6 +3,8 @@
 <head>
   <title>references</title>
   	<link rel="stylesheet" href="../styles/mystyles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
 .h5 {
   display: inline-block;
