--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -3,6 +3,7 @@
   <head>
     <title>Group 0115 - AI-Human Collaboration</title>
     <link rel="stylesheet" href="../styles/mystyles.css">
+	  <link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var lastUpdated = new Date(document.lastModified);
