--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -3,7 +3,7 @@
   <head>
     <title>Group 0115 - AI-Human Collaboration</title>
     <link rel="stylesheet" href="../styles/mystyles.css">
-	  <link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+	  
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var lastUpdated = new Date(document.lastModified);
@@ -14,6 +14,41 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+	  
+	  <style>
+		  table {
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+td, th {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 20px;
+}
+
+th {
+  background-color: rgb(235,235,235);
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(even) td {
+  background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+  background-color: rgb(245,245,245);
+}
+
+caption {
+  padding: 10px;
+}
+		  
+	  </style>
     
 	</head>
   <body>
