--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -95,10 +95,10 @@ caption {
 	
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 1</th>
-		<td>a</td>
-		<td>b</td>
-        <td>1</td>	
-		<td>h</td>
+		<td>Benson</td>
+		<td>Wilson</td>
+        <td>20107401</td>	
+		<td href="https://hrp8144.github.io/">https://hrp8144.github.io/</td>
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
