--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -98,7 +98,7 @@ caption {
 		<td>Benson</td>
 		<td>Wilson</td>
         <td>20107401</td>	
-		<td href="https://hrp8144.github.io/">https://hrp8144.github.io/</td>
+		<td><a href="https://hrp8144.github.io/">https://hrp8144.github.io/</a></td>
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
