--- a/misc/choices.html
+++ b/misc/choices.html
@@ -81,12 +81,12 @@
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
-      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
     </p>
       </address>
     <footer>
       <p>Last updated: <span id="last-updated"></span>
       </p>
     </footer>
-  </body>
-</html>
+ </html>
+
