--- a/misc/team-formation.html
+++ b/misc/team-formation.html
@@ -19,18 +19,18 @@
 
 <h4>Due Date:  Advised on Canvas  </h4><p><em>(Team coordinator to confirm team have met with your TA)</em></p> 
 
-<h4><p>Team name ____________________________________________________</p></h4>
+<h4><p>Team name: 0115</p></h4>
 
-<h4><p>Team coordinator/Leader ______________________________________</p></h4>
+<h4><p>Team coordinator/Leader: Benson</p></h4>
 		
 <table>
     <p>
 	<body ><th>Team Member Details</th>
     
         
-        <th scope="col" class="last name">Last Name</th> 
-	    <th scope="col" class="first name">First Name</th> 
-        <th scope="col" class="id">Student ID</th> 
+        <th scope="col" class="last name">Wilson</th> 
+	    <th scope="col" class="first name">Benson</th> 
+        <th scope="col" class="id">20107401</th> 
 		
     </tr>
 	<hr />
@@ -49,12 +49,7 @@
 		<td></td>
         <td></td>
 		
- 
-    </tr>
-	<th scope="row">Team Member 3</th>
-        <td></td>
-		<td></td>
-        <td></td>
+	
 		
   
     </tr>
