--- a/misc/team-formation.html
+++ b/misc/team-formation.html
@@ -91,9 +91,9 @@ caption {
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Team Member 2</th>
-        <td></td>
-		<td></td>
-        <td></td>
+        <td>Vincent</td>
+		<td>yu pui ming</td>
+        <td>21150745</td>
 		
 	
 		
