--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -74,10 +74,10 @@ caption {
 
 <h4>Due Date:  As Advised via Canvas </h4><p><em>(To be discussed and confirmed with your TA)</em></p> 
 
-<h4><p>Team name ____________________________________________________</p></h4>
+<h4><p>Team name: 0115</p></h4>
 
 
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
+<h4><p>Team Coordinator/Leader: Benson</p></h4>
 
 <p><h5>This is the first stage of your team project, where you propose the chosen technology/topic which you will investigate.  This will then be approved or reviewed.</h5></p>
 
@@ -94,7 +94,7 @@ caption {
 <p align = "left"</p>
 		<tr>
 		<th scope="row">Topic-name</th>
-		<td> <em>Topic Name</em></td>
+		<td> <em>AI-Human Collaboration</em></td>
 	
    </tr>	
 	</hr>
@@ -105,7 +105,12 @@ caption {
 
 <p><h6><em>Note: the preferred option will be to fill in this cell in your site with 'hard coded' updated details in this form(between the topic name cell ('td' = "table data" element) in the row, and email the link to your TA when completed.  Please think of this site as a work in progress.</p></h6></em> 
 
-<h5><p>Please briefly describe your topic, its relevance and importance and why you have chosen it</h5></p> 
+<h5><p>Many "human" jobs, such as diagnosing disease, translating languages, and providing customer service, are being mastered by artificial intelligence, which is advancing rapidly. This development understandably leads to concerns that AI will eventually replace human workers in various industries. 
+	However, this is not the only possible outcome, nor is it the most probable one. We have never experienced digital tools that are as responsive to us as they are now, and our interaction with these tools has never been so profound.<br>
+The fear of AI (or commonly “robots”) has always been a fear of any given modern time period.<br>
+The useof AI-Humancollaboration has been known to have a notable performance improvement in its respective job sector.
+<br>The rise of “gig economy” jobs helps sustain independent & short-term commitments compared to those that require a constant streamline of processes.<br>
+Collaboration does not mean replacement, collaboration means enhancement. </h5></p> 
 
 <table>
     <p>
