--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -102,10 +102,10 @@ caption {
    </tr>
 	<p align = "left"</p>
 	<tr><th scope="row">Team Member 2</th>
-        <td>c</td>
-		<td>d</td>
+        <td>Vincent</td>
+		<td>Yu Pui Ming </td>
         <td>3</td>	
-		<td>h</td>
+		<td>21150745</td>
     </tr>
 	</body>  
 </table>
