--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -105,12 +105,6 @@ caption {
 
 <p><h6><em>Note: the preferred option will be to fill in this cell in your site with 'hard coded' updated details in this form(between the topic name cell ('td' = "table data" element) in the row, and email the link to your TA when completed.  Please think of this site as a work in progress.</p></h6></em> 
 
-<h5><p>Many "human" jobs, such as diagnosing disease, translating languages, and providing customer service, are being mastered by artificial intelligence, which is advancing rapidly. This development understandably leads to concerns that AI will eventually replace human workers in various industries. 
-	However, this is not the only possible outcome, nor is it the most probable one. We have never experienced digital tools that are as responsive to us as they are now, and our interaction with these tools has never been so profound.<br>
-The fear of AI (or commonly “robots”) has always been a fear of any given modern time period.<br>
-The useof AI-Humancollaboration has been known to have a notable performance improvement in its respective job sector.
-<br>The rise of “gig economy” jobs helps sustain independent & short-term commitments compared to those that require a constant streamline of processes.<br>
-Collaboration does not mean replacement, collaboration means enhancement. </h5></p> 
 
 <table>
     <p>
@@ -123,7 +117,12 @@ Collaboration does not mean replacement, collaboration means enhancement. </h5><
 <p align = "left"</p>
 		<tr>
 		<th scope="row">Topic-description</th>
-		<td> <em>paragraph justifying your choice of topic</em></td>
+		<td> <em>Many "human" jobs, such as diagnosing disease, translating languages, and providing customer service, are being mastered by artificial intelligence, which is advancing rapidly. This development understandably leads to concerns that AI will eventually replace human workers in various industries. 
+	However, this is not the only possible outcome, nor is it the most probable one. We have never experienced digital tools that are as responsive to us as they are now, and our interaction with these tools has never been so profound.<br>
+The fear of AI (or commonly “robots”) has always been a fear of any given modern time period.<br>
+The useof AI-Humancollaboration has been known to have a notable performance improvement in its respective job sector.
+<br>The rise of “gig economy” jobs helps sustain independent & short-term commitments compared to those that require a constant streamline of processes.<br>
+Collaboration does not mean replacement, collaboration means enhancement. /em></td>
 	
    </tr>	
 	</hr>
