--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -105,7 +105,7 @@ caption {
         <td>Vincent</td>
 		<td>Yu Pui Ming </td>
         <td>21150745</td>	
-		<td>https://github.com/vincentyu22/yupuimingvincent.github.io</td>
+		<td><a href="https://github.com/vincentyu22/yupuimingvincent.github.io">https://github.com/vincentyu22/yupuimingvincent.github.io</td>
     </tr>
 	</body>  
 </table>
