--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -53,7 +53,6 @@ caption {
 
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
 <!-- Site navigation menu -->
 
 <ul class="navbar">
@@ -151,9 +150,9 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 	
 	<p align = "left"</p>
 		<th scope="row">Team Member 1</th>
-		<td></td>
-		<td></td>
-        <td></td>
+		<td>Wilson/td>
+		<td>Benson</td>
+        <td>20107401</td>
 		
    </tr>
 	<p align = "left"</p>
@@ -162,12 +161,6 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 		<td></td>
         <td></td>
 		 
-    </tr>
-	<th scope="row">Team Member 3</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		  
     </tr>
 	
   
@@ -192,10 +185,10 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 	
 	<p align = "left"</p>
 		<th scope="row">Team Member 1</th>
-		<td></td>
-		<td></td>
-        <td></td>
-		<td></td>
+		<td>Website Design</td>
+		<td>Writing</td>
+        <td>Referencing</td>
+		<td>Researchn</td>
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Team Member 2</th>
@@ -204,13 +197,6 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
         <td></td>
 		<td></td>
  
-    </tr>
-	<th scope="row">Team Member 3</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		<td></td>
-  
     </tr>
 	
   
