--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -150,7 +150,7 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 	
 	<p align = "left"</p>
 		<th scope="row">Team Member 1</th>
-		<td>Wilson/td>
+		<td>Wilson</td>
 		<td>Benson</td>
         <td>20107401</td>
 		
