--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -188,7 +188,7 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 		<td>Website Design</td>
 		<td>Writing</td>
         <td>Referencing</td>
-		<td>Researchn</td>
+		<td>Research</td>
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Team Member 2</th>
