--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -229,7 +229,7 @@ Collaboration does not mean replacement, collaboration means enhancement. /em></
 </table>
 
 <h5>Link to your Team Repository: </h5>
-<a href="https://canvas.aut.ac.nz/courses/1048/discussion_topics/3449">Portfolio Repository Team [Your Team Name] Link</a>      
+<a href="https://github.com/hrp8144/hrp8144.github.io">Portfolio Repository Team [0115] Link</a>      
 
   <hr/>
 <p><h6><em>Note: you can replace the Link above with a'hard coded' link to your repository [e.g. Canvas discussion Board] in this form or equivalent.</p></h6></em> 
