--- a/misc/evaluation.html
+++ b/misc/evaluation.html
@@ -60,7 +60,7 @@ caption {
 </ul>
 
 <h1>Peer Evaluation Form for Team Work [Private Page]</h1><br>
-<p>Team name ____________________________________________________</p>
+<p>Team name: 0115</p>
 
 <h4>Due Date:  With Final Individual Component Submission </h4><p><em>(Student to upload this evaluation to Canvas)</em></p> 
 
