--- a/misc/evaluation.html
+++ b/misc/evaluation.html
@@ -23,35 +23,28 @@
   font-size: 0.8rem;
   color: black;
 }
-
 td, th {
   border: 1px solid rgb(190,190,190);
   padding: 10px 20px;
 }
-
 th {
   background-color: rgb(235,235,235);
 }
-
 td {
   text-align: center;
 }
-
 tr:nth-child(even) td {
   background-color: rgb(250,250,250);
 }
-
 tr:nth-child(odd) td {
   background-color: rgb(245,245,245);
 }
-
 caption {
   padding: 10px;
 }
 		  
 	  </style>
 	  </head>
-
 <body>
 <!-- Site navigation menu -->
 <ul class="navbar">
@@ -64,7 +57,6 @@ caption {
 
 <h4>Due Date:  With Final Individual Component Submission </h4><p><em>(Student to upload this evaluation to Canvas)</em></p> 
 
-
 <p>Write the name of each of your team members in a separate column. For each person,<br>
  indicate the extent to which you agree with the statement on the left, using a scale <br>
  of 1-4 
@@ -76,8 +68,6 @@ caption {
  </ol>
  
 <p> Total the numbers in each column.
-
-
 		
 <table>
     <p>
@@ -96,7 +86,18 @@ caption {
 		<td></td>
 		<td></td>
         <td></td>
-
+   </tr>
+	<p align = "left"</p>
+		<th scope="row"></th>
+		<td></td>
+		<td></td>
+        <td></td>
+   </tr>
+		<p align = "left"</p>
+		<th scope="row">Attends team meetings regularly and arrives on time.</th>
+		<td></td>
+		<td></td>
+        <td></td>
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Contributes meaningfully to team discussions.</th>
@@ -144,13 +145,11 @@ caption {
         		
    </tr>
 </table>
-
 <p><h4>Student name: ......................................., id:...................., Signature: ...............................</p></h4>
 <hr/>
 <p><h6><em>Note: the simplest option will be to fill in the sheet, and upload the site or a pdf of this page to CANVAS for your Individaul Component when completed.</p></h6></em> 
  <p><h6><em>As this is a static site without security features, it is not automated at this stage.[But usefully shows the limits of technology too]</p></h6></em>
 </body>
-
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
       <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
