--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>guidelines</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
-</head>
-
-<body>
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body>
 <!-- Site navigation menu -->
 <ul class="navbar">
 	<li><a href="../index.html">Home</a>
@@ -19,16 +29,25 @@
 <h1>Meeting Minutes</h1><br>
 
 
-<h4><p>Team name ____________________________________________________</p></h4>
+<h4><p>Team name: 0115</p></h4>
 
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
+<h4><p>Team Coordinator/Leader: Benson</p></h4>
 		
-
-  <a href="https://canvas.aut.ac.nz/courses/1048/discussion_topics/3449" Meeting Minutes Repository Alternative Link</a>      
+   
+	  <h1> Microsoft Teams Chat </h1>
+	  <img src="../images/MicrosoftTeams.PNG" alt="Microsoft Teams Chat Screenshot">
 
   
 
 <hr/>
-<p><h6><em>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. Canvas discussion Board pages or Dropbox links</h6></em></p>
-</body>
-</html>
+<p><h6><em>Microsoft Teams Chat</h6></em></p>
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+ </html>
