--- a/misc/rubric.html
+++ b/misc/rubric.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>Rubric</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
-</head>
-
-<body>
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body>
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="../index.html">Home</a>
@@ -13,10 +23,10 @@
 </ul>
 
 <h1>Project Assessment Rubric</h1><br>
-<p>Team name ___________0115_____________________________</p>
+<p>Team name: 0115</p>
 
-<p><h4>Student name: Benson Wilson , id:...................., Grade: ...............................</p></h4>
- <p><h4>Student name: Yu Pui Ming Vincent, id: 21150745 , Grade: year 1</p></h4>
+<p><h4>Student name: Benson Wilson , id: 20107401, Grade: ...............................</p></h4>
+ <p><h4>Student name: Yu Pui Ming Vincent, id: 21150745 , Grade: ...............................</p></h4>
 
 <hr/>
 
@@ -35,4 +45,13 @@
 
 </p>
 </body>
-</html>
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+ </html>
