--- a/misc/guidelines.html
+++ b/misc/guidelines.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>guidelines</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
-</head>
-
-<body>
+  <head>
+    <title>Group 0115 - AI-Human Collaboration</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body>
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="../index.html">Home</a>
@@ -18,9 +28,9 @@
 <h1>Guideline Conformance Form</h1><br>
 
 
-<h4><p>Team name ____________________________________________________</p></h4>
+<h4><p>Team name: 0115</p></h4>
 
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
+<h4><p>Team Coordinator/Leader: Benson</p></h4>
 		
 <table>
     <p>
@@ -53,4 +63,13 @@
 <p><h6><em>Note: the preferred option will be to fill in the cells in your site with 'hard coded' updated details in this form(between each cell ('td' = "table data" element) in a row, and upload with the site to Blackboard when completed.  Think of this site as a work in progress.</p></h6></em> 
 
 </body>
-</html>
+    <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
+    <p>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
+    </p>
+      </address>
+    <footer>
+      <p>Last updated: <span id="last-updated"></span>
+      </p>
+    </footer>
+ </html>
