--- a/misc/choices.html
+++ b/misc/choices.html
@@ -72,11 +72,11 @@
   </ul>
       <p>The increased use of AI within business has also given rise to the "Gig Economy" which is a freely available choice for you to pursue. These jobs usually are short-term, freelancer-like jobs where you are independent, and are paid on a contract-to-contract basis. 
         This can be a variety of one-off jobs to short temporary hires for months at a time. The most common Gig Economy jobs you might know can include a lot of food delivery services such as Uber, or even hotel apps like AirBnB. Other independent self-sustaining jobs arise 
-        in the case where a service is in short supply due to high consumer demand. Overall, it's inevitable that AI will drastically change how a workforce operates. In fact, a survey of 1,075 companies in 12 industries found that the more of AI-Human collaboration principles 
-        companies adopted (principles such as standard business practices, employee involvement, cultivating and re-imagining employee skills, etc) found an increased overall performance in terms of speed, cost savings, revenues, or other operational measures. 
+        in the case where a service is in short supply due to high consumer demand. <br>Overall, it's inevitable that AI will drastically change how a workforce operates. In fact, a survey of 1,075 companies in 12 industries found that the more of AI-Human collaboration principles 
+        companies adopted (principles such as standard business practices, employee involvement, cultivating and re-imagining employee skills, etc) found an <b>increased overall performance</b> in terms of speed, cost savings, revenues, or other operational measures. 
         A big disadvantage AI has is that what comes naturally to people (making a joke, for example) can be <b>tricky for machines</b>, and what’s straightforward for machines (analyzing gigabytes of data) <b>remains virtually impossible for humans.</b></p>
 
-<br> I will now leave you with this closing statement: <b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i>
+<br> I will now leave you with this closing statement: <h2><br><b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i></h2>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
