--- a/misc/references.html
+++ b/misc/references.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>references</title>
+  <head>
+    <title>Group 0115 - References</title>
+    <link rel="stylesheet" href="../styles/mystyles.css">
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var lastUpdated = new Date(document.lastModified);
+        var lastUpdatedText = lastUpdated.toLocaleString();
+        document.getElementById('last-updated').textContent = lastUpdatedText;
+      });
+    </script>
   	<link rel="stylesheet" href="../styles/mystyles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
