--- a/misc/topic.html
+++ b/misc/topic.html
@@ -43,7 +43,7 @@
       <p>How many times have you opened up a support service chat, and it's very first prompt is to direct you to its services chatbot to help you? <br><b>It's a lot more than you think.</b> <br>AI-Human collaboration is already happening, any company can apply AI-Human collaboration in its different areas and already have a competitive advantage over those who do not apply such practices. </p>
       <p>This collaboration can take different forms, such as using AI algorithms to aid human decision-making processes, automating repetitive tasks, or using AI-powered analytics to gain insights from vast amounts of data. Something that is difficult for us humans to do.
         By integrating AI tools into their operations, companies can increase efficiency, productivity, and accuracy while freeing up human resources to focus on more complex and value-added tasks, and this HAS already occurred. <br>
-        The benefits of AI-human collaboration are already evident in fields like <b>healthcare, finance, marketing, and customer service.</b><br><
+        The benefits of AI-human collaboration are already evident in fields like <b>healthcare, finance, marketing, and customer service.</b><br><br>
         For instance, in healthcare, AI algorithms can assist doctors in diagnosing diseases by analyzing medical images and patient data. <br><br>
         In finance, AI-powered algorithms can analyze market trends and make informed investment decisions. <br><br>
         In marketing, AI tools can personalize advertisements based on individual preferences and behavior. <br><br>
