--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -40,7 +40,7 @@
       <div class="bordered-text">
         <h2>Creates New Possibilities through Machine Learning and Natural Language Processing:</h2>
         <p>AI, powered by machine learning algorithms and natural language processing capabilities, has the potential to revolutionize various industries by unlocking new possibilities. Machine learning enables AI systems to analyze vast amounts of data, recognize patterns, and make accurate predictions. This opens doors to improved decision-making, personalized user experiences, and advanced automation. <br>
-          Natural language processing is another capability that allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. 
+          <br>Natural language processing is another capability that allows AI to understand and generate human language, facilitating more natural interactions between humans and machines. 
           It allows machines to understand and generate human language, enabling more natural and seamless interactions between humans and machines. Voice assistants like Siri, Google Assistant, and Amazon Alexa are prime examples of AI applications that leverage natural language processing to understand and respond to user voice commands (which is why products such as Amazon's Alexa is so successful).
           <br>This technology has revolutionized human-computer interactions, making them more intuitive and user-friendly, it's ease of use is what makes it attractive to the average person. 
           Natural language processing also enables AI-powered chatbots and virtual assistants to engage in human-like conversations, providing customer support, answering queries, and automating routine tasks. With these advancements, AI can drive innovation and transform industries in ways that will overall benefit companies.</p>
@@ -55,6 +55,12 @@
       <div class="bordered-text">
         <h2>Enhanced Productivity: AI Automating Mundane Tasks and Enabling Human Focus on Complex Work:</h2>
         <p>One of the key advantages of AI is its ability to automate repetitive and mundane tasks, freeing up valuable time for human workers to focus on more complex and creative aspects of their work. By delegating routine tasks to AI systems, productivity can be significantly enhanced. Humans can then allocate their energy and expertise to higher-level tasks that require critical thinking, problem-solving, and creativity. This collaboration between AI and humans leverages the strengths of both, leading to increased efficiency and better outcomes in various professional domains.</p>
+      <p> It's no secret that analyzing huge datastores is a mundane or even near-impossible task for an average person to do on their own. Which is why AI is better suited for analyzing large complex data, it excels at performing tasks that involve data processing, analysis, and rule-based operations. 
+        These tasks often consume a significant amount of time and can be prone to errors when done manually. However, AI systems can handle these tasks with speed, accuracy, and consistency. 
+        For example, AI could automate data entry, generate reports, perform quality control checks, or even process large volumes of information in a fraction of the time it would take a human to complete them.<br>
+        By offloading these mundane and complex tasks to AI, employees are no longer bound to exhausting repetitive work that can be dull and time-consuming. 
+        This allows them to redirect their attention and skills toward higher-level tasks that require critical thinking, problem-solving, and creativity. 
+        Implementing AI into any business practice means allocating employees to manage and engage in many factors of any given business sector such as: strategic decision-making, innovation, complex problem-solving, or even building meaningful relationships with clients or customers which is far more suited for a human than it is for an AI.
       </div>
     </div>
 
