--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -75,6 +75,11 @@
   <div class="bordered-text">
     <h2>Remote Work Facilitated by AI Technologies:</h2>
     <p>AI technologies are playing a pivotal role in facilitating remote work and breaking down geographical barriers. With the help of AI-powered tools, remote collaboration has become easier, enabling workers from different locations to connect and collaborate seamlessly. AI can provide virtual environments that simulate real-world settings, allowing remote workers to access and interact with distant environments as if they were physically present. This promotes global collaboration, fosters knowledge sharing, and expands opportunities for individuals to contribute to projects regardless of their geographical location.</p>
+    <p>AAI technologies can create virtual environments that simulate real-world settings, further enhancing remote work capabilities. Through augmented reality (AR) and virtual reality (VR) technologies, remote workers can access and interact with distant environments as if they were physically present. 
+      For example, employees can participate in virtual meetings, training sessions, or project walkthroughs using VR headsets, enabling them to feel more immersed and engaged in the remote work experience. 
+      This immersive technology also enables remote workers to manipulate and interact with virtual objects and environments, fostering a sense of presence and enhancing productivity.<br>
+      <p>This also helps remote workers to overcome the limitations of physical distance and time zones. For example, AI-powered language translation tools help ease communication and understanding among team members who speak different languages. 
+        Real-time transcription and translation uses enable remote workers to participate in discussions and meetings, regardless of the language being spoken, promoting a sense of worldwide/global collaboration and inclusivity.
   </div>
 
   <!-- Point: Rise of the "gig economy" jobs empowered by AI -->
