--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -85,7 +85,18 @@
   <!-- Point: Rise of the "gig economy" jobs empowered by AI -->
   <div class="bordered-text">
     <h2>Rise of the "Gig Economy" Jobs Empowered by AI:</h2>
-    <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
+    <p>The emergence of AI-enabled roles is transforming the nature of work, giving rise to the "gig economy" and flexible work options. AI technologies empower individuals to leverage their expertise and skills in versatile ways, adapting to market demands and sustaining independent work arrangements. 
+      Through online platforms and marketplaces, AI connects freelancers, consultants, and contractors with opportunities that match their skills and interests. This allows workers to engage in project-based work, take on multiple clients, and have greater control over their professional lives. 
+      The flexibility provided by AI in the job market fosters a dynamic ecosystem where individuals can thrive based on their unique capabilities and preferences.</p>
+    
+    <p> By analyzing the capabilities and preferences of workers, as well as the requirements of projects or tasks, AI technologies can efficiently connect individuals with suitable gigs.
+      These platforms provide a marketplace where workers can showcase their skills, build their reputation through reviews and ratings, and secure new opportunities in a transparent and efficient manner.<p>
+    <br>
+    <p>This flexibility is particularly advantageous for individuals who prefer to work on their own terms or who have diverse skills that can be applied across different projects or industries. 
+      Workers can choose projects that align with their interests, availability, or even desired compensation at times, giving them greater control over their lives, and how they choose to manage it. 
+      The gig economy enabled by AI allows workers to explore a variety of projects, expand their portfolio of skills, and diversify their income streams. Reiterating, this in turn gives more freedom and control over ones life.</p>
+    <p>AI technologies can even assist gig economy workers in managing their workflow, optimizing their productivity, and enhancing their professional capabilities & attributes to the job at hand. 
+      AI-powered project management tools can streamline task allocation, automate repetitive processes, and provide insights and recommendations to improve work efficiency.</p>
     <img src="../images/economia-gig-economy-1024x614 (1).jpg" alt="economia-gig-economy">
   </div>
 
