--- a/misc/risks.html
+++ b/misc/risks.html
@@ -75,6 +75,18 @@
         However, this is not the case. Yes, some jobs will become obsolete, but new jobs will be created as a result of AI. What we do know for certain is that companies whose main goal is to deploy AI to automate processes in order to mainly 
         replace employees will only see short-term productivity gains. This conclusion was obtained by said research relating to the graph that involved 1500 companies, they found that <i>"firms achieve the most significant performance improvements 
         when humans and machines work together. Through such collaborative intelligence, humans and AI actively enhance each other’s complementary strengths: the leadership, teamwork, creativity, and social skills of the former, and the speed, scalability, and so on".</i> </p>
+      <p>The potential loss of human independence and creativity is also a great concern. While AI systems can automate certain tasks, they lack the ability to exhibit human qualities such as intuition, empathy, and creativity. 
+        These uniquely human traits are difficult to replicate and remain highly valuable in many industries and job roles. In fact, AI technologies are often designed to enhance human creativity and decision-making by providing insights, data analysis, 
+        and support rather than replacing human creativity altogether. Collaboration between humans and AI can lead to more innovative and effective outcomes, they work together in order to leverach eachothers strengths. 
+        As previously stated before, <i>Real empathy or creativity cannot be re-created by AI, at the end of the day it will still be 0's and 1's.</i>
+        <br>
+        <p>Workforce safety is another important consideration. As AI technologies are integrated into various industries, ensuring the safety of workers is essential. This involves addressing concerns such as the ethical use of AI, data privacy, and security. 
+          The technology sector of many companies are no strangers to concerns about data privacy, which is why protection laws such as the CCPA or the GDPR exist. These laws each grant the user with rights with their data as with knowing what they choose to share.
+          It is crucial to establish guidelines and regulations to ensure that AI technologies are developed and implemented in a responsible and safe manner, prioritizing the well-being of both workers and the general public.</p><br>
+      <p>It is crucial to maintain a balanced viewpoint when it comes to workforce safety involving AI. Again, although certain jobs may become outdated, new opportunities will arise. 
+        Collaboration between humans and AI is essential to fully harness the potential of these various technologies, with human qualities like creativity and independence that will still hold a great significant value. 
+        As long as we acknowledge and understand the partnership and collaboration process humans and AI, it'll strengthen and prioritize workforce safety as with evolving the future of work towards benefiting individuals and society at large.
+        
 
 Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  
       </div>
